# make-it-wright

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: python-app.yml
examples/: AbsProcessing.py  PLProcessing.py  main.py  main2.py  pl_T_R_A.py  workup.py
makeitwright/: __init__.py  __version__.py  andor.py  artists.py  beckerhickl.py  horiba.py  iontof.py  parsers.py  spectra.py  styles.py  xrd.py
makeitwright/core/: __init__.py  artists.py  helpers.py  hyperspectral.py  image.py  spectra.py  spectralprofile.py  styles.py
makeitwright/core/parsers/: __init__.py  andor.py  gwyddion.py  horiba.py  iontof.py  sp130.py  xrd.py
makeitwright/datasets/: __init__.py
makeitwright/process/: afm.py  andor.py  beckerhickl.py  helpers.py  horiba.py  hyperspectral.py  image.py  iontof.py  spectra.py  spectralprofile.py  xrd.py
makeitwright/process/transmittance_references/: Ag-P01.csv  BK7.csv  UVFS.csv
makeitwright/transmittance_references/: Ag-P02.csv  CaF2.csv  MgF2.csv  UVAl.csv  sapphire.csv
scripts/: AbsProcessing.py  PLProcessing.py  main.py  main2.py  workup.py
tests/: test_PL.py  test_import.py
