[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "makeitwright"
description = "Plotting and parsing tools for the Jin Group."
readme = "README.md"
authors = [{name="Chris Roy"}]
maintainers = [{name="Dan Kohler"}]
requires-python = ">=3.7"
dependencies = [
    "psutil",
    "wrighttools",
    "cmocean",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
license = "MIT"

[project.optional-dependencies]
iontof = ["pySPM"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
